--- a/index.css
+++ b/index.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
+
 body {
+    font-family: 'MedievalSharp', cursive;
     color: white;
     margin-left: auto;
     margin-right: auto;
