--- a/index.css
+++ b/index.css
@@ -10,7 +10,8 @@ body {
     flex-flow: column nowrap;
     align-items: center;
     font-size: 18px;
-    background-color: rgb(90, 90, 90);
+    background-color: rgb(235, 201, 151);
+    padding-bottom: 5em;
 }
 
 h1 {
@@ -22,6 +23,12 @@ h1 {
 
 h2 {
     font-size: 2em;
+    margin: 1em;
+    color: rgb(255, 0, 127);
+}
+
+h3{
+    font-size: 1.5em;
     margin: 1em;
     color: rgb(255, 0, 127);
 }
