--- a/index.css
+++ b/index.css
@@ -55,6 +55,7 @@ button {
     border-radius: 10em;
     text-align: center;
     line-height: 50%;
+    margin-bottom: 1em;
 }
 
 .submit:hover,
@@ -62,12 +63,31 @@ button:hover {
     background-color: rgb(255, 0, 127);
 }
 
-th {
-    color: rgb(255, 0, 127);
+.table-slot {
+    display: flex;
+    justify-content: center;
 }
 
-tr {
+table {
+    border: solid 1px black;
+    border-collapse: collapse;
+    border-spacing: 0;
+    display: none;
+    max-width: 80%;
+}
+
+thead th {
+    background-color: rgb(255, 0, 127);
+    border: solid 1px black;
     color: black;
+    padding: 1em;
+}
+
+tbody td {
+    border: solid 1px black;
+    color: black;
+    padding: 1em;
+    text-align: center;
 }
 
 @media only screen and (max-width: 600px) {
